# myCPP

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: calculator.h
src/: calculator.cpp  main.cpp
tests/: project2Test.cpp
